[package]
name = "ferrischat_cdn"
version = "0.1.0"
edition = "2021"
authors = ["FerrisChat Team <crates@ferris.chat>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cdn_server", "cdn_storage", "cdn_common"]

[dependencies]
tokio = { version = "1.14", features = ["full"] }
env_logger = "0.9"
clap = "~2.27.0"
