[package]
name = "cdn_auth"
version = "0.1.0"
edition = "2021"
description = "CDN Authorization and token verification"
license = "EUPL-1.2"
homepage = "https://ferris.chat"
repository = "https://github.com/FerrisChat/CDN"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
lazy_static = "1.4"
axum = "0.4"
async-trait = "0.1"

[dependencies.cdn_common]
path = "../cdn_common"
version = "0.1.0"
