[package]
name = "cdn_common"
version = "0.1.0"
edition = "2021"
description = "Common things between CDN Server and CDN Storage"
license = "EUPL-1.2"
homepage = "https://ferris.chat"
repository = "https://github.com/FerrisChat/CDN"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd-json = "0.4"
axum = "0.4"
tokio = { version = "1.14", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
http = "0.2"
reqwest = { version = "0.11", features=[] }

[dependencies.ferrischat_common]
git = "https://github.com/FerrisChat/Common"
version = "0.2"
