[package]
name = "cdn_server"
version = "0.1.0"
edition = "2021"
description = "FerrisChat's CDN Server"
license = "EUPL-1.2"
homepage = "https://ferris.chat"
repository = "https://github.com/FerrisChat/CDN"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
hmac-sha512 = "1.1.1"

[dependencies.axum]
version = "0.4"
features = ["headers"]

[dependencies.async-compression]
version = "0.3"
features = ["tokio", "zstd"]

[dependencies.tokio]
version = "1.14"
features = ["full"]