[package]
name = "cdn_storage"
version = "0.1.0"
edition = "2021"
description = "FerrisChat's CDN Storage Server"
license = "EUPL-1.2"
homepage = "https://ferris.chat"
repository = "https://github.com/FerrisChat/CDN"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
hmac-sha512 = "1.1"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
tracing = "0.1"

[dependencies.tower-http]
version = "0.2.0"
features = ["trace"]

[dependencies.axum]
version = "0.4"
features = ["headers", "multipart"]

[dependencies.async-compression]
version = "0.3"
features = ["tokio", "zstd"]

[dependencies.tokio]
version = "1.14"
features = ["full"]

[dependencies.cdn_common]
path = "../cdn_common"
version = "0.1.0"

[dependencies.deadpool]
version = "0.9"
features = ["rt_tokio_1", "serde"]

[dependencies.deadpool-redis]
version = "0.10"
features = ["serde"]

[dependencies.redis]
version = "0.21"
features = ["aio", "tokio", "tokio-comp"]
